[tool.poetry]
name = "besta-tools"
version = "1.1.0"
description = "Tools for working with Besta data formats"
authors = ["dogtopus <dogtopus@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pefile = "^2024.8.26"
pyelftools = "^0.32"
click = "^8.1.7"
construct-typing = "^0.6.2"
marshmallow-dataclass = "^8.7.0"
pyyaml = "^6.0.1"
pyusb = "^1.2.1"
libusb-package = { version = "^1.0.26.4", optional = true }
filetype = "^1.2.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
types-pyyaml = "^6.0.12.20240311"
pyusb-stubs = {git = "https://github.com/Project-Muteki/pyusb-stubs.git"}
mypy = "^1.17.1"
filetype-stubs = {git = "https://github.com/Project-Muteki/filetype-stubs.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
prebuilt-libusb = ["libusb-package"]

[tool.poetry.scripts]
elf2bestape = 'besta_tools.elf2bestape:main'
titlemgr = 'besta_tools.titlemgr:main'
romtool = 'besta_tools.romtool:app'
imgtool = 'besta_tools.imgtool:app'
dfutool = 'besta_tools.dfutool:app'

[tool.pyright]
# This may be a burden for code with loose typing, or legit uses of Any. Downgrade severity to Info for now.
reportAny = 'information'
reportExplicitAny = 'information'
# We sometimes intentionally ignore return values to keep things brief (like with file.write()).
reportUnusedCallResult = 'information'
