[project]
name = "besta-tools"
description = "Tools for working with Besta data formats"
authors = [
    { name = "dogtopus", email = "dogtopus@users.noreply.github.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pefile (>=2024.8.26,<2025.0.0)",
    "pyelftools (>=0.33,<1.0)",
    "construct-typing (>=0.6.2,<1.0.0)",
    "marshmallow-dataclass (>=8.7.0,<9.0.0)",
    "pyyaml (>=6.0.1,<7.0.0)",
    "pyusb (>=1.2.1,<2.0.0)",
    "filetype (>=1.2.0,<2.0.0)",
    "click-extra (>=8.1.1,<9.0.0)",
    "pillow (>=12.3.0,<13.0.0)",
    "numpy (>=2.5.1,<3.0.0)",
]
dynamic = ["version"]

[project.optional-dependencies]
prebuilt-libusb = [
    "libusb-package (>=1.0.26.4,<1.0.27.0)",
]

[project.scripts]
elf2bestape = 'besta_tools.elf2bestape:app'
titlemgr = 'besta_tools.titlemgr:app'
romtool = 'besta_tools.romtool:app'
imgtool = 'besta_tools.imgtool:app'
dfutool = 'besta_tools.dfutool:app'
hcatool = 'besta_tools.hcatool:app'

[dependency-groups]
dev = [
    "ipython (>=8.26.0)",
    "types-pyyaml (>=6.0.12.20240311,<=7.0.0.0)",
    "pyusb-stubs @ git+https://github.com/Project-Muteki/pyusb-stubs.git",
    "mypy (>=1.17.1)",
    "filetype-stubs @ git+https://github.com/Project-Muteki/filetype-stubs.git",
]
test = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-timeout (>=2.4.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
# Whitelist _version.py or otherwise it will be excluded in built artifacts.
include = [
    { path = "src/besta_tools/_version.py", format = ["sdist", "wheel"] },
]
packages = [
    { include = "besta_tools", from = "src" },
    { include = "besta_tools/_version.py", from = "src" },
]
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry-dynamic-versioning.files."src/besta_tools/_version.py"]
persistent-substitution = true
initial-content = """
  # Generated by poetry-dynamic-versioning. Do not edit.
  # These version placeholders will be replaced later during substitution.
  __all__ = ["__version__", "__version_tuple__"]

  __version__ = "0.0.0"
  __version_tuple__ = (0, 0, 0)
"""

[tool.poetry-dynamic-versioning.substitution]
files = ["src/besta_tools/_version.py"]

[tool.pyright]
# This may be a burden for code with loose typing, or legit uses of Any. Downgrade severity to Info for now.
reportAny = 'information'
reportExplicitAny = 'information'
# We sometimes intentionally ignore return values to keep things brief (like with file.write()).
reportUnusedCallResult = 'information'
